--- a/sources/OSC-VS/Device/FPGA.vcxproj
+++ b/sources/OSC-VS/Device/FPGA.vcxproj
@@ -99,6 +99,7 @@
     <ClCompile Include="..\..\Device\src\Menu\Pages\PageCursors.cpp" />
     <ClCompile Include="..\..\Device\src\Menu\Pages\PageDebug.cpp" />
     <ClCompile Include="..\..\Device\src\Menu\Pages\PageDisplay.cpp" />
+    <ClCompile Include="..\..\Device\src\Menu\Pages\PageFunction.cpp" />
     <ClCompile Include="..\..\Device\src\Menu\Pages\PageHelp.cpp" />
     <ClCompile Include="..\..\Device\src\Menu\Pages\PageMeasures.cpp" />
     <ClCompile Include="..\..\Device\src\Menu\Pages\PageMemory.cpp" />
@@ -254,6 +255,7 @@
     <ClInclude Include="..\..\Device\src\Menu\Pages\PageCursors.h" />
     <ClInclude Include="..\..\Device\src\Menu\Pages\PageDebug.h" />
     <ClInclude Include="..\..\Device\src\Menu\Pages\PageDisplay.h" />
+    <ClInclude Include="..\..\Device\src\Menu\Pages\PageFunction.h" />
     <ClInclude Include="..\..\Device\src\Menu\Pages\PageHelp.h" />
     <ClInclude Include="..\..\Device\src\Menu\Pages\PageMeasures.h" />
     <ClInclude Include="..\..\Device\src\Menu\Pages\PageMemory.h" />
