--- a/sources/OSC-VS/Device/FPGA.vcxproj
+++ b/sources/OSC-VS/Device/FPGA.vcxproj
@@ -100,6 +100,7 @@
     <ClCompile Include="..\..\Device\src\Menu\Pages\PageDebug.cpp" />
     <ClCompile Include="..\..\Device\src\Menu\Pages\PageDisplay.cpp" />
     <ClCompile Include="..\..\Device\src\Menu\Pages\PageFunction.cpp" />
+    <ClCompile Include="..\..\Device\src\Menu\Pages\PageFunctionFFT.cpp" />
     <ClCompile Include="..\..\Device\src\Menu\Pages\PageHelp.cpp" />
     <ClCompile Include="..\..\Device\src\Menu\Pages\PageMeasures.cpp" />
     <ClCompile Include="..\..\Device\src\Menu\Pages\PageMemory.cpp" />
@@ -256,6 +257,7 @@
     <ClInclude Include="..\..\Device\src\Menu\Pages\PageDebug.h" />
     <ClInclude Include="..\..\Device\src\Menu\Pages\PageDisplay.h" />
     <ClInclude Include="..\..\Device\src\Menu\Pages\PageFunction.h" />
+    <ClInclude Include="..\..\Device\src\Menu\Pages\PageFunctionFFT.h" />
     <ClInclude Include="..\..\Device\src\Menu\Pages\PageHelp.h" />
     <ClInclude Include="..\..\Device\src\Menu\Pages\PageMeasures.h" />
     <ClInclude Include="..\..\Device\src\Menu\Pages\PageMemory.h" />
