--- a/sources/OSC-VS/Device/FPGA.vcxproj.filters
+++ b/sources/OSC-VS/Device/FPGA.vcxproj.filters
@@ -408,6 +408,9 @@
     <ClCompile Include="..\..\Device\src\Menu\Pages\PageFunctionRecorderSource.cpp">
       <Filter>Menu\Pages\PageFunction</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\Device\src\Menu\Pages\PageFunctionRecorderRecord.cpp">
+      <Filter>Menu\Pages\PageFunction</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\common\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Inc\stm32f4xx_hal.h">
